[gd_scene load_steps=5 format=3 uid="uid://d2tgg3acpkmmv"]

[ext_resource type="Script" path="res://Screens/Scripts/Settings.gd" id="1"]
[ext_resource type="Theme" uid="uid://bci48k31qmg5s" path="res://UI/Themes/Button Main.tres" id="2"]
[ext_resource type="Theme" uid="uid://3c3551c1o0qx" path="res://UI/Themes/Settings Item.tres" id="3"]
[ext_resource type="Theme" uid="uid://ca5qemcdtm13y" path="res://UI/Themes/Title.tres" id="4"]

[node name="Settings" type="Node2D"]
script = ExtResource("1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 1024.0
color = Color(0.137255, 0.356863, 0.454902, 1)

[node name="lblSettings" type="Label" parent="UI"]
layout_mode = 0
offset_right = 599.0
offset_bottom = 92.0
theme = ExtResource("4")
text = "Settings"

[node name="AndroidSettings" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 600.0
offset_bottom = 1024.0

[node name="chkbtnJumpOnRelease" type="CheckButton" parent="UI/AndroidSettings"]
layout_mode = 0
offset_left = 24.0
offset_top = 119.0
offset_right = 231.0
offset_bottom = 159.0
theme = ExtResource("3")
text = "Jump on tap release"

[node name="btnMenu" type="Button" parent="UI"]
layout_mode = 0
offset_left = 40.0
offset_top = 881.0
offset_right = 276.0
offset_bottom = 980.0
theme = ExtResource("2")
text = "Save"

[node name="btnCancel" type="Button" parent="UI"]
layout_mode = 0
offset_left = 334.0
offset_top = 880.0
offset_right = 570.0
offset_bottom = 979.0
theme = ExtResource("2")
text = "Cancel"

[connection signal="pressed" from="UI/btnMenu" to="." method="_on_btnMenu_pressed"]
[connection signal="pressed" from="UI/btnCancel" to="." method="_on_btnCancel_pressed"]
